[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Naves Inimigas/enemyBlack1.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 55.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="PosicaoDaBala" type="Position2D" parent="."]
position = Vector2( 0, 78.9121 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -66.4418 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
